cmake_minimum_required(VERSION 3.26)
project(Estructuras_de_datos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Estructuras_de_datos
        DocReferencia/Cola.cpp
        DocReferencia/ListaCircular.cpp
        DocReferencia/ListaDoble.cpp
        DocReferencia/listaSimple.cpp
        DocReferencia/listaSimpleX.cpp
        DocReferencia/pila.cpp
        Proyectos/Proyecto1/Main.cpp
        Tareas/Tarea1/Tarea1.cpp
        Tareas/Tarea2/Tarea2.cpp
        Tareas/Tarea4/Tarea4.cpp
        Tareas/TareaCorta1/TareaCorta1.cpp)
